--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,39 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Container {
+  width: 400px;
+  margin: 0px auto;
+  padding: 5px;
+  text-align: center;
+  display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ConvertFrom {
+  float: left;
+  width: 33%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ConvertTo {
+  float: right;
+  width: 33%;
 }
 
-.App-link {
-  color: #61dafb;
+.SelectRate {
+  width: 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.InputValue {
+  width: 100px;
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+}
+
+.Equals {
+  float: left;
+  text-align: center;
+  width: 34%;
+  padding-top: 10px;
+  font-size: xx-large;
 }
